cmake_minimum_required(VERSION 3.10)
project(test)
set(CMAKE_CXX_STANDARD 11)
add_executable(main main.cpp)
find_package(Armadillo CONFIG REQUIRED)
target_link_libraries(main PRIVATE armadillo)
find_package(Armadillo REQUIRED)
target_include_directories(main PRIVATE ${ARMADILLO_INCLUDE_DIRS})
target_link_libraries(main PRIVATE ${ARMADILLO_LIBRARIES})
