cmake_minimum_required(VERSION 3.30)
project(cmake-toolchain-file-test C CXX)

add_executable(main main.c)

message(STATUS "Looking up implicit C++ link libraries")
list(JOIN CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "\n    " dirs)
message("" "C++ implicit link directories:\n    ${dirs}\n")

set(CMAKE_FIND_DEBUG_MODE 1)
set(implicit_link_libs "${CMAKE_CXX_IMPLICIT_LINK_LIBRARIES}")
list(REMOVE_ITEM implicit_link_libs ${CMAKE_C_IMPLICIT_LINK_LIBRARIES})
foreach(lib IN LISTS implicit_link_libs)
    if(EXISTS "${lib}")
        message("" "Absolute path: ${lib}\n")
    else()
        string(MAKE_C_IDENTIFIER "${lib}" id)
        find_library(${id}_LIBRARY NAMES "${lib}")
        if(NOT ${id}_LIBRARY)
            find_library(${id}_LIBRARY NAMES "${lib}" PATHS ${CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES} NO_DEFAULT_PATH)
        endif()
        target_link_libraries(main PRIVATE ${${id}_LIBRARY})
    endif()
endforeach()
