cmake_minimum_required(VERSION 3.25.1)
project(dbus-cxx-test CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(dbus-cxx CONFIG REQUIRED COMPONENTS glib uv qt)
add_executable(main main.cpp)
target_link_libraries(main PRIVATE dbus-cxx::dbus-cxx dbus-cxx::dbus-cxx-glib dbus-cxx::dbus-cxx-uv dbus-cxx::dbus-cxx-qt)
